2006-11-20  Dan Winship  <danw@novell.com>

	* configure.in: 2.2.98

	* NEWS: update

2006-11-20  Dan Winship  <danw@novell.com>

	Patch from Andrew W. Nosenko:

	* libsoup/soup-message-client-io.c (parse_response_headers): Avoid
	memory leak when parse_response_headers() is called on a message
	that has a 'reason_phrase' already for some reason.

	* libsoup/soup-gnutls.c (soup_gnutls_free): Avoid memory leak:
	hostname was not freed.
	(soup_ssl_wrap_iochannel): Avoid memory leak: SoupGNUTLSChannel
	'chan' was not freed in case of initialization error. Avoid double
	close of the "real" (plain, non-ssl) channel FD.
	
	* libsoup/soup-socket.c (soup_socket_start_proxy_ssl): Avoid
	memory leak: the "real" (plain, non-ssl) GIOChannel was never
	"finally" unreffed (one more *_ref() than *_unref()) in case of
	ssl-wrapping.

2006-11-20  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection-ntlm.c (send_request): 
	* libsoup/soup-session-sync.c (queue_message): 
	* libsoup/soup-status.c (reason_phrases): Add some missing
	"static"s. Patch from Matthias Clasen, #376387

	* libsoup/soup-xmlrpc-response.c (soup_xmlrpc_value_get_type)
	(soup_xmlrpc_value_get_string): <value>foo</value> should mean the
	same thing as <value><string>foo</string></value>. Pointed out by
	Todd Kulesza. #364490

2006-11-06  Dan Winship  <danw@novell.com>

	* configure.in: Bump version to 2.2.97. Bump AGE and CURRENT for
	addition of soup_xml_real_node.

	* NEWS: update

2006-11-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-misc.c (soup_xml_real_node): new method to find a
	"real" (ie, not comment or whitespace) xml node

	* libsoup/soup-soap-response.c (parse_parameters) 
	(soup_soap_response_from_string) 
	(soup_soap_parameter_get_first_child) 
	(soup_soap_parameter_get_next_child): Use soup_xml_real_node.
	Based on a patch from Andrew W. Nosenko.

	* libsoup/soup-xmlrpc-message.c (soup_xmlrpc_message_from_string):
	don't call xmlKeepBlanksDefault, which changes libxml's behavior